Version next
	added, support for bootstrap cards on mainpage
Version 0.2.7
	added, MIT-License translations in german, russian. It can be found in the docs-directory
	added, edit function for pages
	update, composer (1.4.3=>1.6.5)
Version 0.2.6 (2018-05-31)
	bugfix, fixed minor bugs
	update, refactory functions
Version 0.2.5 (2018-05-18)
	Warning!!! This Version is not compatible to early Versions of heinerCMS any more.
	bugfix, fixed minor bugs
	update, rename table cels
	update, tinymce/tinymce (4.7.12 => 4.7.13)
	update, many new comments for 'old' functions
Version 0.2.4.1 (2018-05-11)
	bugfix, SQLSTATE[HY000] [2002] php_network_getaddresses: getaddrinfo failed: Name or service not known
Version 0.2.4 (2018-05-11)
	add, installer create sqlite database for heinercms
	bugfix, fixed bugs in installer
	update, tinymce/tinymce (4.7.11 => 4.7.12)
Version 0.2.3.1 (2018-05-07)
	update, update the configuration file for the installer
Version 0.2.3 (2018-05-04)
	added, sqlite database support for heinercms
	added, database debug options for developers
	bugfix, fixed bugs in public downloads section
	bugfix, fixed many many other minor bugs
	update, twbs/bootstrap (4.1.0 => 4.1.1)
	update, refactory database connection
Version 0.2.2 (2018-04-20)
	added, temporaly page delete function. this function not working for now
	bugfix, fixed many many other minor bugs
	update, twbs/bootstrap (4.0.0 => 4.1.0)
	update, tinymce/tinymce (4.7.10 => 4.7.11)
	update, sign has a new fresh style
	update, refactory software, rename functions, refactor routes, templates has new structure
	update, sites are called pages from now
Version 0.2.1 (2018-04-09)
	added, public downloads
	added, downloads settings
	update, many new translations
	update, installer writes downloads settings
	update, tinymce/tinymce (4.7.9 => 4.7.10)
	bugfix, fixed other minor bugs
	bugfix, public navigation shows no longer invisible content on public pages
	bugfix, fixed a bug in admin user page