@@ -17,7 +17,7 @@ if (is_logged_in ()) {
     $filename = filter_input(INPUT_POST,'filename');
     $visible  = filter_input(INPUT_POST,'visible');
 
-    updateDownloadsEntry($id, $title, $comment, $path, $filename, $visible);
+    updateDownload($id, $title, $comment, $path, $filename, $visible);
 
     header('Location: index.php?uri=downloads');
 
